<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.arrowhead</groupId>
  <artifactId>arrowhead-plantdescriptionengine</artifactId>
  <packaging>jar</packaging>
  <version>0.0.2</version>
  <name>Arrowhead Plant Description Engine</name>
  <description>Arrowhead Plant Description Engine core service</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>11</maven.compiler.release>
    <kalix.version>0.4.2</kalix.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>se.arkalix</groupId>
        <artifactId>kalix-base</artifactId>
        <version>${kalix.version}</version>
    </dependency>
    <dependency>
        <groupId>se.arkalix</groupId>
        <artifactId>kalix-core-plugins</artifactId>
        <version>${kalix.version}</version>
    </dependency>
    <dependency>
        <groupId>se.arkalix</groupId>
        <artifactId>kalix-processors</artifactId>
        <version>${kalix.version}</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>1.7.30</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
        </plugin>
        <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>

                <archive>
                    <manifest>
                      <mainClass>eu.arrowhead.core.plantdescriptionengine.PdeMain</mainClass>
                    </manifest>
                </archive>

            </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.5</version>
          <configuration>
            <excludes>
                <exclude>**/*Dto.*</exclude>
                <exclude>**/dto/*Builder.*</exclude>
            </excludes>
         </configuration>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <phase>test</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
    </plugins>

  </build>

</project>